--- a/Nahuel-web/pages/contacto.html
+++ b/Nahuel-web/pages/contacto.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contacto | Navarro Competición</title>
-  <link rel="stylesheet" href="../assets/css/styles.css">
+  <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
 
 <body>
@@ -49,6 +49,7 @@
   </section>
 
   <div id="footer"></div>
-<script src="../assets/js/main.js"></script>
+<script src="/assets/js/main.js"></script>
 </body>
+
 </html>
