--- a/Nahuel-web/pages/disciplinas.html
+++ b/Nahuel-web/pages/disciplinas.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Disciplinas | Navarro</title>
-  <link rel="stylesheet" href="../assets/css/styles.css">
+  <link rel="stylesheet" href="/assets/css/styles.css">
 
 
 
@@ -72,7 +72,8 @@
 
 <div id="footer"></div>
 
-  <script src="../assets/js/main.js"></script>
+  <script src="/assets/js/main.js"></script>
 
 </body>
+
 </html>
