--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Navarro – Experiencia Marcial</title>
-   <link rel="stylesheet" href="assets/css/styles.css">
+   <link rel="stylesheet" href="/assets/css/styles.css">
 
 
 
@@ -21,7 +21,7 @@
 
 
 
-<script src="assets/js/main.js"></script>
+<script src="/assets/js/main.js"></script>
 </body>
 
 
@@ -176,7 +176,8 @@
     <!-- FOOTER -->
     <div id="footer"></div>
 
-  <script src="assets/js/main.js"></script>
+  <script src="/assets/js/main.js"></script>
 
 </body>
+
 </html>
